--- a/HW1CSS.css
+++ b/HW1CSS.css
@@ -2,5 +2,8 @@ body {
     background-color: #cab8a9;
 }
 input {
-    background-color: rgb(167, 178, 146);
+    background-color: rgba(170, 182, 146, 0.712);
+}
+h1 {
+    text-shadow: 3px 3px 3px slategray;
 }
