--- a/Hw1/HW1CSS.css
+++ b/Hw1/HW1CSS.css
@@ -20,3 +20,12 @@ textarea {
 form {
     align-content: center;
 }
+footer {
+    text-align: center;
+}
+.foot { 
+    display: flex;
+    flex-direction: column; 
+    min-height: 100vh; 
+    justify-content: flex-end;
+}
