--- a/Hw1/HW1CSS.css
+++ b/Hw1/HW1CSS.css
@@ -23,3 +23,9 @@ form {
 footer {
     text-align: center;
 }
+.foot { 
+    display: flex;
+    flex-direction: column; 
+    min-height: 100vh; 
+    justify-content: flex-end;
+}
